jena-shex/src/test/files/spec/negativeSyntax/1val1vcrefSTRING_LITERAL1.shex
# ShapeExpression labels may not be literals.

"vc1" LITERAL minlength 4

<http://a.example/EmployeeShape> {
   <http://a.example/p4> @"vc1"
}

